src/test/ui/generic-associated-types/issue-62326-parameter-out-of-range.stderr
error[E0280]: the requirement `for<'a> <Self as Iterator>::Item<'a>: 'a` is not satisfied
  --> $DIR/issue-62326-parameter-out-of-range.rs:7:20
   |
LL | trait Iterator {
   |       -------- required by a bound in this
LL |     type Item<'a>: 'a;
   |                    ^^ required by this bound in `Iterator`

error: aborting due to previous error

